# inifile2

./: .gitignore  CMakeLists.txt  README.md  build.sh  error.ini  makefile
.github/workflows/: ccpp.yml
src/: CMakeLists.txt  inifile.cpp  inifile.h  inifile_test.cpp  stringutil.cpp  stringutil.h
test/: CMakeLists.txt  Makefile  error.cpp  error.ini  inifile_test.cpp  mytest.cpp  new.ini  test.ini  test_save_as.ini  test_save_deleteK.ini
